# learn_opengl

./: Cargo.toml  readme.md
shaders/: 1.4.texture.frag  1.4.texture.vert  1.8.camera.frag  1.8.camera.vert  firstShader.frag  firstShader.vert
src/: camera.rs  common.rs  creating_a_window.rs  hello_triangle.rs  hello_window.rs  lib.rs  lister.rs  main.rs  runner.rs  shader.rs
src/exercises/: camera.rs  creating_a_window.rs  hello_triangle.rs  mod.rs  shader.rs  template_runner.rs  textures.rs
