[package]
name = "learn_opengl"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Frauens"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = { version = "0.18.0", features = ["swizzle"] }
clap = { version = "4.1.6", features = ["derive"] }
gl = "0.14.0"
glfw = "0.51.0"
image = "0.24.5"
# only needed starting ch 3
num = "0.4.0"
rand = "0.8.5"
tobj = "3.2.4"

